Add Facebook login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <string name="view">View</string>
     <string name="init_view">0</string>
+
+    <string name="facebook_app_id">1099253093470604</string>
 </resources>
