Update 1. Complete love event 2. Down cache from 50M to 15M

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="name">Name</string>
 
     <string name="facebook_app_id">1131735883527080</string>
+    <string name="require_login_home">Login to use social and download</string>
+    <string name="require_login_love">Login to use love album</string>
+
 </resources>
