--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Girl Xinh</string>
     <string name="action_settings">Settings</string>
 
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+
 
     <string name="init_count">0</string>
 
@@ -16,5 +19,9 @@
     <string name="require_login_home">Login to use social and download</string>
     <string name="require_login_love">Login to use love album</string>
     <string name="no_photo_is_loved">No photo is loved</string>
+
+    <string name="network_info">Network Info</string>
+    <string name="network_connect_no">Unable access internet, please check internet connection</string>
+    <string name="network_connect_yes">Internet is connected</string>
 
 </resources>
