--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="require_login_love">Login to use love album</string>
     <string name="no_photo_is_loved">No photo is loved</string>
 
+    <string name="login_fail">Login fail. please try again</string>
+
     <string name="network_info">Network Info</string>
     <string name="network_connect_no">Unable access internet, please check internet connection</string>
     <string name="network_connect_yes">Internet is connected</string>
