1.Update package ID, icon 2. Add download to love tab 3. Delete toast when internet connected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Girl Xinh</string>
+    <string name="app_name">Talo</string>
     <string name="action_settings">Settings</string>
 
     <string name="ok">OK</string>
