--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,10 @@
     <string name="network_connect_yes">Internet is connected</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-8284127915682026/7328378938</string>
+
+    <string name="home">Home</string>
+    <string name="love">Love</string>
+    <string name="upload">Upload</string>
+    <string name="me">Me</string>
+    <string name="logout">Logout</string>
 </resources>
