add upload activity and a little bit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
 
     <string name="publish">Publish</string>
     <string name="review">Review</string>
+
+    <string name="hint_photo_description">Description for this photo...</string>
 </resources>
